--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,4 @@ code {
 @import './styles/playerForm.css';
 @import './styles/playersList.css';
 @import './styles/numberOfPlayers.css';
+@import './styles/main.css';
