--- a/src/styles/playersList.scss
+++ b/src/styles/playersList.scss
@@ -1,12 +1,12 @@
 .players-list-container{
-    background-color: rgba(0,255,255);
-    box-shadow: 0.5rem 0.5rem  rgba(255,0,255);
+    background-color: #D83F87;
+    box-shadow: 0.5rem 0.5rem black;
     border: 0.5rem solid #FFF;
-    color: rgba(0,0,0);
+    color: white;
     height: 28rem;
-    width: 20rem;
-	margin-right: auto;
-	margin-left: auto;
+    width: 25rem;
+	margin-right: 5rem;
+	margin-left: 5rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -15,6 +15,7 @@
 	overflow: scroll;
 	scrollbar-width: none;
     position: relative;
+    font-size: 2rem;
 }
 
 ::-webkit-scrollbar {
@@ -25,17 +26,22 @@ scrollbar {
     display: none;
 }
 
-.players-list-header{
-    background-color: rgba(0,255,255);
-    box-shadow: 0.5rem 0.5rem  rgba(255,0,255);
-    border: 0.5rem solid #FFF;
-    color: rgba(0,0,0);
-}
+// .players-list-header{
+//     background-color: #F76C6C;
+//     box-shadow: 0.5rem 0.5rem  rgba(255,0,255);
+//     border: 0.5rem solid #FFF;
+//     color: rgba(0,0,0);
+// }
 
 .player-card{
-    background-color: rgba(0,255,255);
-    box-shadow: 0.5rem 0.5rem  rgba(255,0,255);
+    background-color: #44318D;
+    font-size: 1rem;
+    box-shadow: 0.5rem 0.5rem black;
     border: 0.5rem solid #FFF;
-    color: rgba(0,0,0);
+    color: white;
     list-style-type: none;
+    width: 15rem;
+    text-align: center;
+    margin: 1rem;
 }
+
