--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -1,10 +1,11 @@
 .btn-confirmsteams{
-    background-color: rgba(0,255,255);
-    box-shadow: 0.5rem 0.5rem  rgba(255,0,255);
+    background-color:  #D83F87;
+    box-shadow: 0.5rem 0.5rem  black;
     border: 0.5rem solid #FFF;
-    color: rgba(0,0,0);
+    color: white;
     padding: 0.3rem;
     margin: 2rem;
+    height: 10rem;
 
     &:hover {
         background-color: rgba(255,0,255);
@@ -16,12 +17,13 @@
 }
 
 .btn-skill-teams{
-    background-color: rgba(0,255,255);
-    box-shadow: 0.5rem 0.5rem  rgba(255,0,255);
+    background-color:  #D83F87;
+    box-shadow: 0.5rem 0.5rem  black;
     border: 0.5rem solid #FFF;
-    color: rgba(0,0,0);
+    color: white;
     padding: 0.3rem;
     margin: 2rem;
+    height: 10rem;
 
     &:hover {
         background-color: rgba(255,0,255);
@@ -29,5 +31,5 @@
         box-shadow: 0.5rem 0.5rem 0 0 rgba(0,255,255);
         border: 0.5rem solid #FFF;
 	}
-
+    
 }
