app colour scheme chosen

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,5 +4,6 @@
 @import './wrappers.scss';
 @import './numberOfPlayers.scss';
 @import './buttons.scss';
+@import './teams.scss';
 
 // sass --watch src/styles/main.scss:src/styles/main.css
