--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -9,8 +9,9 @@
     padding: 0.3rem;
     margin: 2rem;
     height: 10rem;
+    font-size: 1.2rem;
 
-    &:hover {
+    &:hover:not([disabled]) {
         background-color: rgba(255,0,255);
         color: rgba(0,0,0);
         box-shadow: 0.5rem 0.5rem 0 0 rgba(0,255,255);
@@ -30,8 +31,9 @@
     padding: 0.3rem;
     margin: 2rem;
     height: 10rem;
+    font-size: 1.2rem;
 
-    &:hover {
+    &:hover:not([disabled]) {
         background-color: rgba(255,0,255);
         color: rgba(0,0,0);
         box-shadow: 0.5rem 0.5rem 0 0 rgba(0,255,255);
