--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin-left: 25rem;
+  margin-left: 28rem;
   text-align: center;
   background-color: #D83F87;
   box-shadow: 0.5rem 0.5rem #2A1B3D;
@@ -27,17 +27,15 @@
   border: 0.5rem solid #FFF;
   color: white;
   height: 33rem;
-  width: 25rem;
+  width: 29rem;
   margin-right: 5rem;
   margin-left: 5rem;
-  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1rem;
   display: block;
   overflow: scroll;
   scrollbar-width: none;
-  position: relative;
   font-size: 2rem;
 }
 
@@ -47,6 +45,12 @@
 
 scrollbar {
   display: none;
+}
+
+.players-list-header {
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 1rem;
 }
 
 .player-card {
@@ -59,6 +63,14 @@ scrollbar {
   width: 15rem;
   text-align: center;
   margin: 1rem;
+  margin-left: 3rem;
+}
+
+.player-delete-btn {
+  width: 2rem;
+  height: 2rem;
+  margin: 0.2rem;
+  background-color: #E98074;
 }
 
 .player-form-container {
@@ -66,42 +78,52 @@ scrollbar {
   box-shadow: 0.5rem 0.5rem #2A1B3D;
   border: 0.5rem solid #FFF;
   color: white;
-  height: 33rem;
+  height: 40rem;
   width: 40rem;
   display: flex;
   margin-left: 5rem;
   flex-direction: column;
-}
-
-.form-field {
-  align-self: center;
+  font-size: 1.5rem;
 }
 
 .player-form-btn {
-  max-height: 4rem;
-  padding: 0.5rem;
+  height: 4rem;
+  width: 6rem;
+  padding: 0.8rem;
   margin: 1rem;
+  margin-left: 17rem;
+  background-color: white;
+  box-shadow: 0.5rem 0.5rem #2A1B3D;
+}
+.player-form-btn:hover:not([disabled]) {
+  background-color: fuchsia;
+  color: black;
+  box-shadow: 0.5rem 0.5rem 0 0 aqua;
+  border: 0.5rem solid #FFF;
 }
 
 .form-input {
   display: flex;
   flex-direction: column;
-  font-size: 1rem;
   margin-bottom: 2rem;
   text-align: center;
-  background-color: #FFF;
-  border: 0.1rem solid black;
   width: 30rem;
   height: 3.5rem;
-  color: black;
+  color: white;
   margin-left: 5rem;
+}
+.form-input input {
+  margin: 0.2rem;
+  padding: 0.5rem;
+  box-shadow: 0.5rem 0.5rem #2A1B3D;
+  font-size: 1rem;
 }
 
 .team-inputs {
   text-align: center;
 }
 
-.player-inputs {
+.skill-inputs {
   text-align: center;
 }
 
@@ -130,19 +152,36 @@ body {
 
 .number-of-players-wrapper {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin-left: 25rem;
+  flex-direction: row;
+  margin-left: 5rem;
   text-align: center;
   background-color: #D83F87;
   box-shadow: 0.5rem 0.5rem #2A1B3D;
   border: 0.5rem solid #FFF;
   color: white;
-  font-size: 1rem;
-  line-height: 4vh;
+  font-size: 1.5rem;
   margin-bottom: 2rem;
   padding: 0.3rem;
-  width: 30rem;
+  width: 28rem;
+}
+.number-of-players-wrapper p {
+  margin-left: 1rem;
+  width: 19rem;
+}
+.number-of-players-wrapper .player-remove-btn {
+  max-width: 2rem;
+  max-height: 2rem;
+  margin: 0.2rem;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  background-color: #E98074;
+}
+.number-of-players-wrapper .player-add-btn {
+  max-width: 2rem;
+  max-height: 2rem;
+  margin: 0.2rem;
+  margin-top: 1rem;
+  background-color: #7db99b;
 }
 
 .btn-confirmsteams {
@@ -153,11 +192,12 @@ body {
   padding: 0.3rem;
   margin: 2rem;
   height: 10rem;
+  font-size: 1.2rem;
 }
 .btn-confirmsteams[disabled] {
   opacity: 0.6;
 }
-.btn-confirmsteams:hover {
+.btn-confirmsteams:hover:not([disabled]) {
   background-color: fuchsia;
   color: black;
   box-shadow: 0.5rem 0.5rem 0 0 aqua;
@@ -172,14 +212,37 @@ body {
   padding: 0.3rem;
   margin: 2rem;
   height: 10rem;
+  font-size: 1.2rem;
 }
 .btn-skill-teams[disabled] {
   opacity: 0.6;
 }
-.btn-skill-teams:hover {
+.btn-skill-teams:hover:not([disabled]) {
   background-color: fuchsia;
   color: black;
   box-shadow: 0.5rem 0.5rem 0 0 aqua;
+  border: 0.5rem solid #FFF;
+}
+
+.team-header {
+  text-align: center;
+  background-color: #D83F87;
+  box-shadow: 0.5rem 0.5rem #2A1B3D;
+  border: 0.5rem solid #FFF;
+  color: white;
+  font-size: 2rem;
+  width: 50rem;
+}
+
+.team-card {
+  width: 50rem;
+  background-color: #D83F87;
+  display: block;
+  font-size: 1.5rem;
+}
+
+.team-list {
+  background-color: #D83F87;
   border: 0.5rem solid #FFF;
 }
 
