--- a/src/styles/playerForm.scss
+++ b/src/styles/playerForm.scss
@@ -3,41 +3,53 @@
     box-shadow: 0.5rem 0.5rem #2A1B3D;
     border: 0.5rem solid #FFF;
     color: white;
-	height: 33rem;
+	height: 40rem;
 	width: 40rem;
 	display: flex;
 	margin-left: 5rem;
 	flex-direction: column;
-}
-
-.form-field{
-	align-self: center;
+	font-size: 1.5rem;
 }
 
 .player-form-btn{
-   max-height: 4rem;
-   padding: 0.5rem;
-   margin: 1rem;
+	height: 4rem;
+	width: 6rem;
+	padding: 0.8rem;
+	margin: 1rem;
+	margin-left: 17rem;
+	background-color: white;
+	box-shadow: 0.5rem 0.5rem #2A1B3D;
+
+	&:hover:not([disabled]) {
+        background-color: rgba(255,0,255);
+        color: rgba(0,0,0);
+        box-shadow: 0.5rem 0.5rem 0 0 rgba(0,255,255);
+        border: 0.5rem solid #FFF;
+	}
 }
 
 .form-input{
 	display: flex;
 	flex-direction: column;
-	font-size: 1rem;
    	margin-bottom: 2rem;
    	text-align: center;
-	background-color: #FFF;
-	border: 0.1rem solid black;
-  	width: 30rem;
+	width: 30rem;  
 	height: 3.5rem;
-	color: black;
+	color: white;
 	margin-left: 5rem;
+
+	input{
+		margin: 0.2rem;
+		padding: 0.5rem;
+		box-shadow: 0.5rem 0.5rem #2A1B3D;
+		font-size: 1rem;
+	}
 }
 
 .team-inputs{
 	text-align: center;
 }
 
-.player-inputs{
+.skill-inputs{
 	text-align: center;
 }
