--- a/src/styles/wrappers.scss
+++ b/src/styles/wrappers.scss
@@ -21,3 +21,14 @@ body{
     background-color: #44318D;
     margin: 0;
 }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 640px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .wrapperz{
+        display: flex;
+        flex-direction: column;
+    }
+
+}
