random and skill btn positioning

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -7,7 +7,7 @@
     border: 0.5rem solid #FFF;
     color: white;
     padding: 0.3rem;
-    margin: 2rem;
+    margin-top: 10%;
     height: 10rem;
     font-size: 1.2rem;
 
@@ -29,7 +29,8 @@
     border: 0.5rem solid #FFF;
     color: white;
     padding: 0.3rem;
-    margin: 2rem;
+    margin-top: 10%;
+    margin-left: 1%;
     height: 10rem;
     font-size: 1.2rem;
 
@@ -40,4 +41,21 @@
         border: 0.5rem solid #FFF;
 	}
     
+}
+
+.btn-reset{
+    height: 4rem;
+	width: 6rem;
+	padding: 0.8rem;
+	background-color: white;
+    box-shadow: 0.5rem 0.5rem #2A1B3D;
+    position: absolute;
+    margin-left: 1%;
+
+	&:hover{
+        background-color: rgba(255,0,255);
+        color: rgba(0,0,0);
+        box-shadow: 0.5rem 0.5rem 0 0 rgba(0,255,255);
+        border: 0.5rem solid #FFF;
+	}
 }
