--- a/src/styles/headers.scss
+++ b/src/styles/headers.scss
@@ -2,14 +2,15 @@
     display: flex;
 	justify-content: center;
     flex-direction: column;
-    margin-left: 25%;
+    margin-left: 30%;
+    margin-top: 1%;
+    margin-bottom: 2rem;
     text-align: center;
 	background-color: #D83F87;
     box-shadow: 0.5rem 0.5rem #2A1B3D;
     border: 0.5rem solid #FFF;
 	color: white;
 	font-size: 4.5rem;
-   	margin-bottom: 2rem;
    	padding: 0.3rem;
     width: 40%;
     height: 10rem;
