added html font-size so rem is responsive for smaller screens

--- a/src/styles/headers.scss
+++ b/src/styles/headers.scss
@@ -29,8 +29,8 @@
   and (max-device-width: 640px)
   and (-webkit-min-device-pixel-ratio: 2) {
     .player-header{
-        font-size: 2rem;
         width: 100%;
-        margin-left: 25%;
+        margin-top: 5%;
+        margin-left: 2%;
 	}
 }
