--- a/src/styles/playersList.scss
+++ b/src/styles/playersList.scss
@@ -4,7 +4,7 @@
     border: 0.5rem solid #FFF;
     color: white;
     height: 32rem;
-    width: 29rem;
+    width: 90%;
 	margin-right: 5rem;
 	margin-left: 5rem;
 	justify-content: center;
