--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -7,6 +7,7 @@
     border: 0.5rem solid #FFF;
     color: white;
     padding: 0.3rem;
+    margin-left: 7%;
     margin-top: 10%;
     height: 10rem;
     font-size: 1.2rem;
@@ -58,4 +59,13 @@
         box-shadow: 0.5rem 0.5rem 0 0 rgba(0,255,255);
         border: 0.5rem solid #FFF;
 	}
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 640px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .btn-reset{
+        position: relative;
+    }
 }
