--- a/src/styles/playerForm.scss
+++ b/src/styles/playerForm.scss
@@ -59,6 +59,7 @@
   and (max-device-width: 640px)
   and (-webkit-min-device-pixel-ratio: 2) {
     .player-form-container{
-		width: 110%;
+		width: 100%;
+		margin-left: 2%;
 	}
 }
