disabled auto zooming on forms for mobile

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -68,4 +68,12 @@
     .btn-reset{
         position: relative;
     }
+    .btn-confirmsteams{
+        margin-left: 3%;
+        width:90%;
+    }
+    .btn-skill-teams{
+        margin-left: 3%;
+        width:90%;
+    }
 }
