--- a/src/styles/numberOfPlayers.scss
+++ b/src/styles/numberOfPlayers.scss
@@ -36,3 +36,14 @@
 
 	}
 }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 640px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .number-of-players-wrapper{
+		width: 88%;
+		margin-top: 3%;
+		margin-left: 3%;
+	}
+}
