--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -327,30 +327,27 @@ body {
   color: white;
   box-shadow: 0.5rem 0.5rem black;
   border: 0.5rem solid #FFF;
-  display: flex;
   margin: 3%;
   padding: 0.3rem;
   background-color: #44318D;
   text-align: center;
 }
-.team-card p {
-  margin-left: 10%;
-}
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 640px) and (-webkit-min-device-pixel-ratio: 2) {
+  .team-list {
+    width: 80%;
+    margin-left: 2%;
+  }
+
   .team-header {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 
   .team-card {
-    width: 80%;
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin: 0%;
     margin-left: 0%;
     padding: 0%;
-  }
-  .team-card p {
-    margin-left: 0%;
   }
 }
 
