--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -92,7 +92,7 @@ scrollbar {
   box-shadow: 0.5rem 0.5rem #2A1B3D;
   border: 0.5rem solid #FFF;
   color: white;
-  height: 41rem;
+  height: 100%;
   width: 35%;
   display: flex;
   margin-left: 5rem;
@@ -105,6 +105,7 @@ scrollbar {
   width: 25%;
   margin: 1rem;
   margin-left: 36%;
+  font-size: 1.5rem;
   background-color: white;
   box-shadow: 0.5rem 0.5rem #2A1B3D;
 }
