--- a/src/styles/playerForm.scss
+++ b/src/styles/playerForm.scss
@@ -3,7 +3,7 @@
     box-shadow: 0.5rem 0.5rem #2A1B3D;
     border: 0.5rem solid #FFF;
     color: white;
-	height: 41rem;
+	height: 100%;
 	width: 35%;
 	display: flex;
 	margin-left: 5rem;
@@ -16,6 +16,7 @@
 	width: 25%;
 	margin: 1rem;
 	margin-left: 36%;
+	font-size: 1.5rem;
 	background-color: white;
 	box-shadow: 0.5rem 0.5rem #2A1B3D;
 
@@ -56,8 +57,8 @@
 }
 
 @media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 640px)
+and (min-device-width: 320px) 
+and (max-device-width: 640px)
   and (-webkit-min-device-pixel-ratio: 2) {
     .player-form-container{
 		width: 90%;
