wrappers given sensible classnames

--- a/src/styles/headers.scss
+++ b/src/styles/headers.scss
@@ -34,3 +34,12 @@
         margin-left: 2%;
 	}
 }
+
+@media only screen  
+and (max-width:1420px) {   
+    .player-header{
+        width: 90%;
+        margin-top: 5%;
+        margin-left: 2%;
+	}
+}
