--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,7 @@
 @import './headers.scss';
 @import './playersList.scss';
 @import './playerForm.scss';
-@import './wrappers.scss';
+@import './settings.scss';
 @import './numberOfPlayers.scss';
 @import './buttons.scss';
 @import './teams.scss';
-
-// sass --watch src/styles/main.scss:src/styles/main.css
