--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -1,4 +1,4 @@
-.btn-confirmsteams{
+.btn-confirms-teams{
     &[disabled] {
         opacity: 0.6;
     }
@@ -67,8 +67,24 @@
   and (-webkit-min-device-pixel-ratio: 2) {
     .btn-reset{
         position: relative;
+        font-size: 90%;
     }
     .btn-confirmsteams{
+        margin-left: 3%;
+        width:90%;
+    }
+    .btn-skill-teams{
+        margin-left: 3%;
+        width:90%;
+    }
+}
+
+@media only screen  
+and (max-width:1420px) {   
+    .btn-reset{
+        position: relative;
+    }
+    .btn-confirms-teams{
         margin-left: 3%;
         width:90%;
     }
