--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,17 +3,16 @@
   justify-content: center;
   flex-direction: column;
   margin-left: 30%;
-  margin-top: 1%;
   margin-bottom: 2rem;
   text-align: center;
   background-color: #D83F87;
   box-shadow: 0.5rem 0.5rem #2A1B3D;
   border: 0.5rem solid #FFF;
   color: white;
-  font-size: 4.5rem;
+  font-size: 3.5rem;
   padding: 0.3rem;
   width: 40%;
-  height: 10rem;
+  height: 7rem;
 }
 .player-header:hover {
   background-color: fuchsia;
@@ -34,6 +33,7 @@
     width: 90%;
     margin-top: 5%;
     margin-left: 2%;
+    font-size: 3rem;
   }
 }
 .players-list-container {
@@ -41,7 +41,7 @@
   box-shadow: 0.5rem 0.5rem black;
   border: 0.5rem solid #FFF;
   color: white;
-  height: 33rem;
+  height: 32.5rem;
   width: 93%;
   margin-right: 5rem;
   margin-left: 5rem;
@@ -305,10 +305,8 @@ body {
 .btn-reset {
   height: 4rem;
   width: 6rem;
-  padding: 0.8rem;
   background-color: white;
   box-shadow: 0.5rem 0.5rem #2A1B3D;
-  position: absolute;
   margin-left: 1%;
 }
 .btn-reset:hover {
@@ -418,6 +416,28 @@ body {
     margin-left: 0%;
     padding: 0%;
   }
+}
+.about-page {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-left: 5%;
+  margin-left: 15%;
+  background-color: #D83F87;
+  box-shadow: 0.5rem 0.5rem #2A1B3D;
+  border: 0.5rem solid #FFF;
+  color: white;
+  font-size: 1.5rem;
+  padding: 0.3rem;
+  width: 70%;
+  height: fit-content;
+}
+.about-page h1 {
+  text-align: center;
+}
+.about-page p {
+  width: 60%;
+  margin-left: 20%;
 }
 
 /*# sourceMappingURL=main.css.map */
