--- a/src/styles/aboutPage.scss
+++ b/src/styles/aboutPage.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     margin-left: 5%;
     margin-left: 15%;
-	background-color: #D83F87;
+	background-color: var(--background-box-color);
     box-shadow: 0.5rem 0.5rem #2A1B3D;
     border: 0.5rem solid #FFF;
 	color: white;
