--- a/src/styles/headers.scss
+++ b/src/styles/headers.scss
@@ -5,9 +5,9 @@
     margin-left: 30%;
     margin-bottom: 2rem;
     text-align: center;
-	background-color: #D83F87;
-    box-shadow: 0.5rem 0.5rem #2A1B3D;
-    border: 0.5rem solid #FFF;
+	background-color: var(--background-box-color);
+    box-shadow: 0.5rem 0.5rem var(--box-shadow);
+    border: 0.5rem solid white;
 	color: white;
 	font-size: 3.5rem;
    	padding: 0.3rem;
@@ -15,10 +15,10 @@
     height: 7rem;
 
 	&:hover {
-        background-color: rgba(255,0,255);
-        color: rgba(0,0,0);
-        box-shadow: 0.5rem 0.5rem 0 0 rgba(0,255,255);
-        border: 0.5rem solid #FFF;
+        background-color: var(--hover-background-box-color);
+        color: black;
+        box-shadow: 0.5rem 0.5rem 0 0 var(--hover-background-box-shadow);
+        border: 0.5rem solid white;
 	}
 
 }
