--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,9 +5,9 @@
   margin-left: 30%;
   margin-bottom: 2rem;
   text-align: center;
-  background-color: #D83F87;
-  box-shadow: 0.5rem 0.5rem #2A1B3D;
-  border: 0.5rem solid #FFF;
+  background-color: var(--background-box-color);
+  box-shadow: 0.5rem 0.5rem var(--box-shadow);
+  border: 0.5rem solid white;
   color: white;
   font-size: 3.5rem;
   padding: 0.3rem;
@@ -15,10 +15,10 @@
   height: 7rem;
 }
 .player-header:hover {
-  background-color: fuchsia;
+  background-color: var(--hover-background-box-color);
   color: black;
-  box-shadow: 0.5rem 0.5rem 0 0 aqua;
-  border: 0.5rem solid #FFF;
+  box-shadow: 0.5rem 0.5rem 0 0 var(--hover-background-box-shadow);
+  border: 0.5rem solid white;
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 640px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -37,9 +37,9 @@
   }
 }
 .players-list-container {
-  background-color: #D83F87;
+  background-color: var(--background-box-color);
   box-shadow: 0.5rem 0.5rem black;
-  border: 0.5rem solid #FFF;
+  border: 0.5rem solid white;
   color: white;
   height: 32.5rem;
   width: 93%;
@@ -69,10 +69,10 @@ scrollbar {
 }
 
 .player-card {
-  background-color: #44318D;
+  background-color: var(--player-card);
   font-size: 1rem;
   box-shadow: 0.5rem 0.5rem black;
-  border: 0.5rem solid #FFF;
+  border: 0.5rem solid white;
   color: white;
   list-style-type: none;
   width: 15rem;
@@ -101,16 +101,16 @@ scrollbar {
   }
 }
 .player-form-container {
-  background-color: #D83F87;
-  box-shadow: 0.5rem 0.5rem #2A1B3D;
-  border: 0.5rem solid #FFF;
-  color: white;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 35%;
-  display: flex;
   margin-left: 5rem;
-  flex-direction: column;
   font-size: 1.5rem;
+  background-color: var(--background-box-color);
+  box-shadow: 0.5rem 0.5rem var(--box-shadow);
+  border: 0.5rem solid white;
+  color: white;
 }
 
 .player-form-btn {
@@ -118,15 +118,15 @@ scrollbar {
   width: 25%;
   margin: 1rem;
   margin-left: 36%;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   background-color: white;
-  box-shadow: 0.5rem 0.5rem #2A1B3D;
+  box-shadow: 0.5rem 0.5rem var(--box-shadow);
 }
 .player-form-btn:hover:not([disabled]) {
-  background-color: fuchsia;
+  background-color: var(--hover-background-box-color);
   color: black;
-  box-shadow: 0.5rem 0.5rem 0 0 aqua;
-  border: 0.5rem solid #FFF;
+  box-shadow: 0.5rem 0.5rem 0 0 var(--hover-background-box-shadow);
+  border: 0.5rem solid white;
 }
 
 .form-input {
@@ -142,7 +142,7 @@ scrollbar {
 .form-input input {
   margin: 0.2rem;
   padding: 0.5rem;
-  box-shadow: 0.5rem 0.5rem #2A1B3D;
+  box-shadow: 0.5rem 0.5rem var(--box-shadow);
   font-size: 1rem;
 }
 
@@ -167,6 +167,14 @@ scrollbar {
     margin-left: 3%;
   }
 }
+:root {
+  --background-box-color: #D83F87;
+  --box-shadow: #2A1B3D;
+  --hover-background-box-color: rgba(255,0,255);
+  --hover-background-box-shadow: rgba(0,255,255);
+  --player-card: #44318D;
+}
+
 @font-face {
   font-family: "Modeseven";
   src: url(fonts/Modeseven.ttf) format("truetype");
@@ -215,9 +223,9 @@ body {
   flex-direction: row;
   margin-left: 5rem;
   text-align: center;
-  background-color: #D83F87;
-  box-shadow: 0.5rem 0.5rem #2A1B3D;
-  border: 0.5rem solid #FFF;
+  background-color: var(--background-box-color);
+  box-shadow: 0.5rem 0.5rem var(--box-shadow);
+  border: 0.5rem solid white;
   color: white;
   font-size: 1.5rem;
   margin-bottom: 2rem;
@@ -261,9 +269,9 @@ body {
   }
 }
 .btn-confirms-teams {
-  background-color: #D83F87;
+  background-color: var(--background-box-color);
   box-shadow: 0.5rem 0.5rem black;
-  border: 0.5rem solid #FFF;
+  border: 0.5rem solid white;
   color: white;
   padding: 0.3rem;
   margin-left: 7%;
@@ -275,16 +283,16 @@ body {
   opacity: 0.6;
 }
 .btn-confirms-teams:hover:not([disabled]) {
-  background-color: fuchsia;
+  background-color: var(--hover-background-box-color);
   color: black;
-  box-shadow: 0.5rem 0.5rem 0 0 aqua;
-  border: 0.5rem solid #FFF;
+  box-shadow: 0.5rem 0.5rem 0 0 var(--hover-background-box-shadow);
+  border: 0.5rem solid white;
 }
 
 .btn-skill-teams {
-  background-color: #D83F87;
+  background-color: var(--background-box-color);
   box-shadow: 0.5rem 0.5rem black;
-  border: 0.5rem solid #FFF;
+  border: 0.5rem solid white;
   color: white;
   padding: 0.3rem;
   margin-top: 10%;
@@ -296,10 +304,10 @@ body {
   opacity: 0.6;
 }
 .btn-skill-teams:hover:not([disabled]) {
-  background-color: fuchsia;
+  background-color: var(--hover-background-box-color);
   color: black;
-  box-shadow: 0.5rem 0.5rem 0 0 aqua;
-  border: 0.5rem solid #FFF;
+  box-shadow: 0.5rem 0.5rem 0 0 var(--hover-background-box-shadow);
+  border: 0.5rem solid white;
 }
 
 .btn-reset {
@@ -310,9 +318,9 @@ body {
   margin-left: 1%;
 }
 .btn-reset:hover {
-  background-color: fuchsia;
+  background-color: var(--hover-background-box-color);
   color: black;
-  box-shadow: 0.5rem 0.5rem 0 0 aqua;
+  box-shadow: 0.5rem 0.5rem 0 0 var(--hover-background-box-shadow);
   border: 0.5rem solid #FFF;
 }
 
@@ -359,9 +367,9 @@ body {
 }
 
 .team-list {
-  background-color: #D83F87;
+  background-color: var(--background-box-color);
   box-shadow: 0.5rem 0.5rem black;
-  border: 0.5rem solid #FFF;
+  border: 0.5rem solid white;
   margin-left: 5rem;
   margin-right: 5rem;
   width: 50%;
@@ -375,7 +383,7 @@ body {
   font-size: 1.5rem;
   color: white;
   box-shadow: 0.5rem 0.5rem black;
-  border: 0.5rem solid #FFF;
+  border: 0.5rem solid white;
   margin: 3%;
   padding: 0.3rem;
   background-color: #44318D;
@@ -423,7 +431,7 @@ body {
   flex-direction: column;
   margin-left: 5%;
   margin-left: 15%;
-  background-color: #D83F87;
+  background-color: var(--background-box-color);
   box-shadow: 0.5rem 0.5rem #2A1B3D;
   border: 0.5rem solid #FFF;
   color: white;
