--- a/src/styles/numberOfPlayers.scss
+++ b/src/styles/numberOfPlayers.scss
@@ -3,9 +3,9 @@
 	flex-direction: row;
     margin-left: 5rem;
     text-align: center;
-	background-color: #D83F87;
-    box-shadow: 0.5rem 0.5rem  #2A1B3D;
-    border: 0.5rem solid #FFF;
+	background-color: var(--background-box-color);
+    box-shadow: 0.5rem 0.5rem  var(--box-shadow);
+    border: 0.5rem solid white;
 	color: white;
 	font-size: 1.5rem;
    	margin-bottom: 2rem;
