--- a/src/styles/playerForm.scss
+++ b/src/styles/playerForm.scss
@@ -1,14 +1,14 @@
 .player-form-container{
-    background-color: #D83F87;
-    box-shadow: 0.5rem 0.5rem #2A1B3D;
-    border: 0.5rem solid #FFF;
-    color: white;
+	display: flex;
+	flex-direction: column;
 	height: 100%;
 	width: 35%;
-	display: flex;
 	margin-left: 5rem;
-	flex-direction: column;
 	font-size: 1.5rem;
+    background-color: var(--background-box-color);
+    box-shadow: 0.5rem 0.5rem var(--box-shadow);
+    border: 0.5rem solid white;
+    color: white;
 }
 
 .player-form-btn{
@@ -16,15 +16,15 @@
 	width: 25%;
 	margin: 1rem;
 	margin-left: 36%;
-	font-size: 1.5rem;
+	font-size: 1.25rem;
 	background-color: white;
-	box-shadow: 0.5rem 0.5rem #2A1B3D;
+	box-shadow: 0.5rem 0.5rem var(--box-shadow);
 
 	&:hover:not([disabled]) {
-        background-color: rgba(255,0,255);
-        color: rgba(0,0,0);
-        box-shadow: 0.5rem 0.5rem 0 0 rgba(0,255,255);
-        border: 0.5rem solid #FFF;
+        background-color: var(--hover-background-box-color);;
+        color: black;
+        box-shadow: 0.5rem 0.5rem 0 0 var(--hover-background-box-shadow);
+        border: 0.5rem solid white;
 	}
 }
 
@@ -41,7 +41,7 @@
 	input{
 		margin: 0.2rem;
 		padding: 0.5rem;
-		box-shadow: 0.5rem 0.5rem #2A1B3D;
+		box-shadow: 0.5rem 0.5rem var(--box-shadow);
 		font-size: 1rem;
 
 	}
