--- a/src/styles/teams.scss
+++ b/src/styles/teams.scss
@@ -10,9 +10,9 @@
 }
 
 .team-list{
-    background-color: #D83F87;
+    background-color: var(--background-box-color);
     box-shadow: 0.5rem 0.5rem black;
-    border: 0.5rem solid #FFF;
+    border: 0.5rem solid white;
     margin-left: 5rem;
     margin-right: 5rem;
     width: 50%;
@@ -26,7 +26,7 @@
     font-size: 1.5rem;
     color: white;
     box-shadow: 0.5rem 0.5rem black;
-    border: 0.5rem solid #FFF;
+    border: 0.5rem solid white;
     margin: 3%;
     padding: 0.3rem;
     background-color: #44318D;
